<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:layout_marginLeft="70dp"
	    android:layout_marginRight="70dp"
	   android:orientation="vertical" 
	   android:layout_gravity="center"
	   android:background="@color/white"
	    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:textColor="@color/red"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	 <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/red"
        android:layout_marginLeft="5dp"/>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:gravity="center"
        android:layout_marginTop="20dp">
	 <TextView
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/this_order_has_been"
	     android:textAppearance="?android:attr/textAppearanceMedium" />

	 <TextView
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/successfully_completed_"
	     android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>

	 <CheckBox
            android:id="@+id/cb_Send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/checkbox_selector"
            android:text="@string/send_sms_to_customer"
            android:textColor="@color/red"
            android:drawablePadding="10dp"
            android:background="@null"
            android:button="@null"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />
	<View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/grey"
     	android:layout_marginTop="20dp"	/>

	<TextView
	    android:id="@+id/tv_ok"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/ok"
	    android:layout_gravity="center_horizontal"
	    android:padding="10dp"
	    android:gravity="center"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
</LinearLayout>
</LinearLayout>
